# lindera-actix-example

./: Cargo.toml  README.md  post_test.sh
infra/ecs/: .gitignore  docker-compose.lindera-api.yml  ecs-params.lindera-api.yml.template  setup.sh  setup.sh.template
infra/terraform/: terragrunt.hcl
infra/terraform/front-service/: .gitignore  iam.tf  lambda.tf.template  provider.tf
infra/terraform/front-service/src/: lambda_function.py
infra/terraform/lindera-api/: .gitignore  ecs.tf  provider.tf
infra/terraform/server/: ecs.tf  provider.tf
infra/terraform/vpc/: .gitignore  outpout.tf  provider.tf  sg.tf  vpc.tf
lindera-api-service/: .gitignore  Dockerfile  Dockerfile.dev  post_test.sh
lindera-api-service/src/: main.rs
src/: main.rs
