[package]
name = "Lindera-api"
version = "0.1.0"
authors = ["tomy <okazaki.nsw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = "0.7"
lindera-core = "0.7"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"